samples/_failures_safe/1761558288_c27e69_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_243cc902.c: In function ‘main’:
./samples/SAFE/__tmp_243cc902.c:143:5: error: expected declaration or statement at end of input
  143 |     printf("Compression/decompression successful\n");
      |     ^~~~~~
